# ro_inventario

./: .gitignore  Cargo.toml  README.md  askama.toml
settings/: dev.json  development.json
src/: main.rs
src/app_state/: extractor.rs  mod.rs
src/controllers/: account.rs  account_controller.rs  home_controller.rs  mod.rs
src/models/: account_models.rs  home_models.rs  mod.rs
src/repos/: users_repo.rs
src/settings/: mod.rs  model.rs
src/validators/: mod.rs  str_validators.rs
templates/: _layout.html  _public_layout.html  login.html  public.html
templates/account/: login.html
templates/home/: landing.html
wwwroot/css/: private.css  public.css
