[package]
name = "ro_inventario"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
askama = { version = "0.12.1", features = ["with-actix-web"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
env_logger = "0.10.1"
log = "0.4.20"
actix-files = "0.6.2"
askama_actix = "0.14.0"
regex = "1.10.2"
